# primordial

./: CMakeLists.txt  COPYING  README.md  qt-license.txt
GraphicsServer/DLL/: Graph32.ocx  vssver.scc
GraphicsServer/INCLUDE/: GSPROP.H  GSW.H  vssver.scc
GraphicsServer/LIB/: GSPROP32.LIB  GSWAG32.LIB  GSWDLL32.LIB  vssver.scc
Help/: ONLINE.HTM  PRIMLIFE.HTM  README.TXT  vssver.scc
Life/Make/: Primordial Life.dsp  Primordial Life.dsw  Primordial Life.ncb  Primordial Life.opt  Primordial Life.plg  Primordial Life.sln  Primordial Life.vcxproj  mssccprj.scc  vssver.scc
Life/RES/: Primordial Life.rc2  Primordial Life.reg
Life/Source/: AboutWnd.cpp  AboutWnd.h  BArchive.h  BiotEditor.cpp  Biots.cpp  Biots.h  Brain.cpp  Brain.h  Collision.h  EnvStatsWnd.cpp  EnvStatsWnd.h  Environ.cpp  Environ.h  Etools.cpp  Etools.h  Evolve.cpp  GeneralView.h  Genotype.cpp  Genotype.h  InitialPopulation.cpp  KeyRegistry.cpp  KeyRegistry.h  LoadBitmap.cpp  LoadBitmap.h  MagnifyWnd.cpp  MainFrm.cpp  MainFrm.h  PLifeView.cpp  PLifeView.h  Palette.cpp  Palette.h  PostData.cpp  PostData.h  Primordial Life.aps  Primordial Life.cpp  Primordial Life.dsp  Primordial Life.dsw  Primordial Life.ncb  Primordial Life.opt  Primordial Life.plg  (+30 more)
LifeQt/: Biots.cpp  Biots.h  Brain.cpp  Brain.h  CMakeLists.txt  Environ.cpp  Environ.h  Etools.cpp  Etools.h  Genotype.cpp  Genotype.h  LifeQt.pro  Rand.cpp  Rand.h  Settings.cpp  Settings.h  SoundRegistry.cpp  SoundRegistry.h  aboutui.cpp  aboutui.h  aboutui.ui  dockviewbiot.cpp  dockviewbiot.h  dockviewbiot.ui  environmentarea.cpp  environmentarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networking.cpp  networking.h  networkui.cpp  networkui.h  networkui.ui  primordial.pro  settingsbiot.cpp  settingsbiot.h  settingsbiot.ui  settingshabitat.cpp  (+12 more)
LifeQt/core/: Biots.cpp  Biots.h  Brain.cpp  Brain.h  Connect.cpp  Connect.h  Environ.cpp  Environ.h  Etools.cpp  Etools.h  Genotype.cpp  Genotype.h  PosAndSpeed.cpp  PosAndSpeed.h  Rand.cpp  Rand.h  Settings.cpp  Settings.h  SoundRegistry.cpp  SoundRegistry.h  json.h  vector.cpp  vector.h
debian/: README.Debian  README.source  changelog  control  copyright  install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  primordial-life.cron.d.ex  primordial-life.doc-base.EX  rules  watch.ex
zlib/: ChangeLog  vssver.scc  zconf.h
